--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,15 @@ dependencies:
   firebase_auth: ^4.0.1
   cloud_firestore: ^4.0.1
   image_picker: ^0.8.6
+  image_picker_platform_interface: ^2.6.1
   firebase_storage: ^11.0.3
   platform: ^3.1.0
   firebase_core_platform_interface: ^4.5.2
   firebase_messaging: ^14.0.4
   convex_bottom_bar: ^2.4.0
+  http: ^0.13.0
+  overlay_support: ^2.1.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
