--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '2.18.1'
+  sdk: '>=2.18.2 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -49,7 +49,6 @@ dependencies:
   firebase_auth: ^4.0.1
   cloud_firestore: ^4.0.1
   image_picker: ^0.8.6
-  image_picker_platform_interface: ^2.6.1
   firebase_storage: ^11.0.3
   platform: ^3.1.0
   firebase_core_platform_interface: ^4.5.2
@@ -59,7 +58,6 @@ dependencies:
   location: ^4.4.0
   flutter_polyline_points: ^1.0.0
   haversine_distance: ^1.2.1
-
 
 dev_dependencies:
   flutter_test:
