--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   location: ^4.4.0
   flutter_polyline_points: ^1.0.0
   haversine_distance: ^1.2.1
+  carousel_slider: ^4.1.1
+  dots_indicator: ^2.1.0
 
 dev_dependencies:
   flutter_test:
