--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   dots_indicator: ^2.1.0
   popup_banner: ^1.0.0
   pinput: ^1.2.0
+  badges: ^3.0.2
 
 dev_dependencies:
   flutter_test:
