--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   badges: ^3.0.2
   flutter_launcher_icons: "^0.11.0"
   flutter_holo_date_picker: ^1.1.0
+  geocoding: ^2.1.0
   flutter_localizations:
     sdk: flutter
 
