--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '2.18.5'
+  sdk: '>=2.18.2 <3.0.0'
 
 # >=2.18.2 <3.0.0  by sayed
 # 2.18.5 by sherif
