--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '2.18.5'
+  sdk: '>=2.18.2 <3.0.0'
 
-# >=2.18.2 <3.0.0  by sayed
+# >=2.18.2 <3.0.0  by sayed and tamer
 # 2.18.5 by sherif
 # 2.18.1 by tamer
 # Dependencies specify other packages that your package needs in order to work.
